# FRC-Kinect

./: .gitignore  CMakeLists.txt  main.cpp
KinectLibrary/: CMakeLists.txt  DeapthToColor.cl  main.cpp
MarkerCreator/: CMakeLists.txt  main.cpp
